[수정] settlement 일부 edge case에 대응하도록 fix