@@ -1,6 +1,7 @@
 package com.jeongchongmu.common;
 
 
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -14,11 +15,24 @@ public class GlobalExceptionHandler {
         return ResponseEntity.badRequest().body(e.getMessage());
     }
 
+    @ExceptionHandler(IllegalStateException.class)
+    public ResponseEntity<String> illegalStateException(IllegalStateException e) {
+        return ResponseEntity.badRequest().body(e.getMessage());
+    }
+
+    @ExceptionHandler(DataIntegrityViolationException.class)
+    public ResponseEntity<String> handleDataIntegrityViolation(DataIntegrityViolationException e) {
+        return ResponseEntity.badRequest().body("데이터 처리 중 오류가 발생했습니다. (중복된 요청이거나 데이터 무결성 위반)");
+    }
+
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<String> methodArgumentNotValidException(MethodArgumentNotValidException e) {
-        String erroMessage = e.getBindingResult().getAllErrors().getFirst().getDefaultMessage();
-
-        return ResponseEntity.badRequest().body(erroMessage);
+        // null safe 처리 (혹시 모를 상황 대비)
+        String errorMessage = "잘못된 입력값입니다.";
+        if (e.getBindingResult().hasErrors()) {
+            errorMessage = e.getBindingResult().getAllErrors().get(0).getDefaultMessage();
+        }
+        return ResponseEntity.badRequest().body(errorMessage);
     }
 
     @ExceptionHandler(Exception.class)
